# audio-processor

./: .env.docker.cpu  .env.example  .env.test  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  test_audio_sample.py  test_e2e_complete.py  test_manager.py  test_strategy_pattern.py
.github/instructions/: project execution.instructions.md
.serena/: config.yml  project.yml
.serena/memories/: code_structure_standards.md  code_style_conventions.md  current_task_pydantic_settings_fix.md  design_patterns.md  graph_architecture.md  openrouter.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_workflow.md  testing_infrastructure.md  testing_setup_fixed.md
app/: main.py
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin.py  autoschema_kg.py  graph.py  health.py  results.py  status.py  transcribe.py  users.py
app/config/: logging.py  settings.py
app/core/: __init__.py  audio_processor.py  deepgram_formatter.py  graph_processor.py  job_queue.py  llm_graph_processors.py  processing_strategies.py  security.py
app/db/: graph_session.py  models.py  session.py
app/db/crud/: __init__.py  base.py  user.py
app/db/migrations/versions/: 148d0033867d_make_hashed_password_nullable_for_jit_.py  9a7fb684b584_add_missing_job_fields_for_admin_.py
app/models/: __init__.py  api.py  database.py  responses.py
app/schemas/: __init__.py  api.py  database.py  graph.py
app/services/: autoschema_neo4j_loader.py  cache.py  conversation_graph.py  diarization.py  graph_service.py  speaker_graph.py  summarization.py  topic_graph.py  transcription.py  translation.py
app/utils/: audio_utils.py  constants.py  error_handlers.py  validators.py
app/workers/: celery_app.py  tasks.py
config/: development.yaml  local.yaml  production.yaml  uat.yaml
deployment/docker/: .dockerignore  .env.example  COMMANDS.md  DEPLOYMENT.md  Dockerfile  Dockerfile.gpu  README.md  docker-compose.dev.yml  docker-compose.dev.yml.backup  docker-compose.full.yml  docker-compose.infra.yml  docker-compose.override.yml  docker-compose.yml  docker-dev.ps1  start-full.ps1  start-infra.ps1  stop-all.ps1  validate-security.sh
deployment/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secrets.yaml  service.yaml
docs/: ADMIN_ENDPOINTS.md  admin-endpoints.md  api.md  autoschema-kg-integration.md  code-quality-setup.md  deployment.md  development.md  jit-user-provisioning-implementation.md  jit-user-provisioning.md  openrouter_config.md  translation-config-example.env  translation-feature.md  url-processing-implementation.md
scripts/: NEO4J_DEMO_GUIDE.md  demo_jit_provisioning.py  demo_neo4j_visualization.py  run-tests.bat  run-tests.ps1  run-tests.sh  run_linting.ps1  run_linting.py  setup-tests.bat  setup-tests.sh  setup_openrouter_env.ps1  test-quick.bat  test-quick.sh  test_jit_components.py  test_translation.py  test_user_endpoints.py
tests/: TESTING.md  conftest.py  run_tests.py  setup_openrouter.py  test_audio_sample.py  test_graph.py  test_llm_graph.py  test_llm_graph_advanced.py  test_openrouter_config.py  test_openrouter_structure.py  test_quick_audio.py  test_strategy_pattern.py  verify_graph.py  verify_openrouter_config.py
tests/autoschema/: check_api_output.py  check_autoschema.py  check_duplicates.py  clean_duplicates.py  clear_autoschema_data.py  debug_file_creation.py  test_autoschema_api.py  test_autoschema_complete.py  test_autoschema_debug.py  test_autoschema_direct.py  test_autoschema_kg.py  test_autoschema_kg_api.py  test_autoschema_patched.py  test_complete_autoschema.py  test_direct_extraction.py  verify_neo4j.py
tests/e2e/: conftest.py  quick_component_test.py  run_e2e_test.py  run_full_e2e_with_server.py  test_e2e_complete.py  test_e2e_complete_pytest.py  test_e2e_quick_check.py  test_e2e_real_audio.py  test_e2e_real_processing.py
tests/integration/: test_admin_integration.py  test_api_endpoints.py  test_callback_integration.py  test_database.py  test_graph_endpoints.py  test_transcription_translation.py  test_user_endpoints.py  test_user_profile_endpoints.py
tests/manual/: test_callback_manual.py
tests/notebooks/: feature_flag_audit.ipynb
tests/unit/: test_admin_endpoints.py  test_audio_processor.py  test_callback_notifications.py  test_deepgram_formatter.py  test_dependencies.py  test_enhanced_health_check.py  test_environment.py  test_feature_flag.py  test_feature_flags.py  test_graph_service.py  test_services.py  test_translation_service.py  test_url_processing.py  test_user_crud.py
